--- a/src/components/ui/Text/Text.module.scss
+++ b/src/components/ui/Text/Text.module.scss
@@ -4,18 +4,24 @@
 	display: block;
 }
 
-.big {
+.h1 {
 	font-size: 127px;
 	line-height: 154px;
 }
 
-.medium {
+.h2 {
+	font-size: 60px;
+	font-weight: 500;
+	line-height: 70px;
+}
+
+.h3 {
 	font-size: 22px;
 	font-weight: 500;
 	line-height: 24px;
 }
 
-.small {
+.h4 {
 	font-size: 18px;
 	line-height: 140%;
 }
