--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,8 @@ $color-black: #000;
 $color-purple-dark: #4a0072;
 $color-purple: #7b1fa2;
 $color-purple-ligth: #ae52d4;
+$color-blue: #64b5f6;
+$color-blue-dark: #42a5f5;
 $color-js: #fff59d;
 $color-ts: #757de8;
 $color-react: #bbdefb;
