--- a/src/components/common/Sidebar/Sidebar.module.scss
+++ b/src/components/common/Sidebar/Sidebar.module.scss
@@ -9,3 +9,19 @@
 
 	color: $color-white;
 }
+
+@media (max-width: 767.98px) {
+	.container {
+		margin-top: 30px;
+		grid-template-columns: repeat(3, auto);
+		justify-content: center;
+		gap: 0 50px;
+	}
+}
+
+@media (max-width: 575.98px) {
+	.container {
+		margin-top: 20px;
+		gap: 0 30px;
+	}
+}
