--- a/src/components/containers/Works/WorksItem/WorksItem.module.scss
+++ b/src/components/containers/Works/WorksItem/WorksItem.module.scss
@@ -3,6 +3,11 @@
 	grid-template-columns: repeat(2, 1fr);
 	justify-content: flex-start;
 
+	.blockImage {
+		.image {
+			border-radius: 20px;
+		}
+	}
 	.blockContent {
 		display: grid;
 		gap: 14px 0;
@@ -14,12 +19,12 @@
 			display: grid;
 			grid-template-columns: repeat(3, auto);
 			gap: 10px 20px;
+			text-align: center;
 		}
 
 		.blockLink {
 			display: grid;
-			grid-template-columns: repeat(2, 100px);
-			align-content: flex-start;
+			justify-content: center;
 		}
 	}
 }
@@ -33,5 +38,42 @@
 	.blockContent {
 		grid-column: 1 / 2;
 		grid-row: 1 / 2;
+	}
+}
+
+@media (max-width: 1199.98px) {
+	.container {
+		grid-template-rows: repeat(2, auto);
+		grid-template-columns: auto;
+
+		.blockContent {
+			.title {
+				text-align: center;
+			}
+		}
+	}
+
+	.reverse {
+		.blockImage {
+			grid-column: none;
+			grid-row: 1 / 2;
+		}
+
+		.blockContent {
+			grid-column: none;
+			grid-row: 2 / 3;
+		}
+	}
+}
+
+@media (max-width: 575.98px) {
+	.container {
+		.blockImage {
+			justify-self: center;
+			.image {
+				max-width: 280px;
+			}
+
+		}
 	}
 }
