--- a/src/components/layouts/MainLayout/MainLayout.module.scss
+++ b/src/components/layouts/MainLayout/MainLayout.module.scss
@@ -14,5 +14,37 @@
 
 	.body {
 		grid-area: body;
+		z-index: 10;
+	}
+}
+
+@media (max-width: 991.98px) {
+	.container {
+		grid-template-columns: auto 3fr 2fr;
+	}
+}
+
+
+@media (max-width: 767.98px) {
+	.container {
+		grid-template-areas:
+			"sidebar sidebar"
+			"body contacts";
+		grid-template-rows: auto 1fr;
+		grid-template-columns: repeat(2, 1fr);
+		justify-items: center;
+		gap: 40px 0;
+	}
+}
+
+@media (max-width: 575.98px) {
+	.container {
+		grid-template-areas: 
+		"sidebar"
+		"body"
+		"contacts";
+		grid-template-rows: repeat(3, 1fr);
+		grid-template-columns: 1fr;
+		gap: 0;
 	}
 }
