--- a/src/components/layouts/WorksLayout/WorksLayout.module.scss
+++ b/src/components/layouts/WorksLayout/WorksLayout.module.scss
@@ -17,3 +17,19 @@
 		grid-area: body;
 	}
 }
+
+@media (max-width: 1399.98px) {
+	.container {
+		gap: 0 15%;
+	}
+}
+
+@media (max-width: 767.98px) {
+	.container {
+		grid-template-areas:
+			"sidebar"
+			"body";
+		grid-template-columns: 1fr;
+		gap: 40px 0; 
+	}
+}
