--- a/src/components/ui/Link/Link.module.scss
+++ b/src/components/ui/Link/Link.module.scss
@@ -26,3 +26,14 @@
 	background-color: $color-purple;
 	border: 10px solid $color-purple-dark;
 }
+
+
+@media (max-width: 575.98px) {
+	.container {
+		width: 85px;
+		height: 85px;
+		font-size: 20px;
+		line-height: 24px;
+		border-radius: 15px;
+	}
+}
